--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
   margin: 9px;
   border: 1px solid black;
   border-radius: 3%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .gridBtns {
@@ -36,4 +41,10 @@ button {
   justify-content: center;
   font-size: 1.5rem; /* reduce font size */
   padding: 20px;
+}
+
+.first,
+.second,
+.third {
+  margin: 5px;
 }
